# RiskFabric

./: .gitignore  .vale.ini  404.html  Cargo.toml  Dockerfile.dlt  README.md  book.toml  concepts_index.html  config_reference.html  customers.parquet  data_schema.html  data_warehouse.html  developer_utilities.html  docker-compose.yml  engineering_index.html  etl_schema.html  feature_leakage_issues.html  fraud_profiles.html  fraud_signatures.html  ground_truth.csv  guides_index.html  how_to_add_fraud.html  index.html  infrastructure_index.html  issues.html  knowledge_index.html  machine_learning.html  ml_metrics.html  ml_systems_index.html  objectives.html  optimizations.html  performance_benchmarks.html  print.html  reference_index.html  results_index.html  searchindex.js  searchindex.json  simulation_index.html  style_guide.html  theory_of_operation.html  (+2 more)
components/: adversary_logic.html  behavioral_features.html  config_engine.html  dbt_models.html  dlt_pipeline.html  etl_system.html  financial_entities.html  generate_rs.html  infrastructure.html  ingestor_rs.html  ml_training.html  model_metadata.html  population_generator.html  realtime_scorer.html  redis_seeder.html  reference_exporter.html  reference_preparator.html  stream_rs.html  transaction_engine.html
dlt/: pipelines.py
documentation/: SUMMARY.md  concepts_index.md  config_reference.md  data_schema.md  data_warehouse.md  developer_utilities.md  engineering_index.md  etl_schema.md  feature_importance_analysis.md  feature_leakage_issues.md  fraud_port_plan.md  fraud_profiles.md  fraud_signatures.md  index.md  (+19 more)
(+77 files in other folders)
