[package]
name = "riskfabric"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { version = "1.19.0", features = ["v4"] }
rayon = '1.11.0'
fake = '4.4.0'
h3o = "0.9.4"
chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
rand = "0.9.2"
polars = { version = "0.51.0", features = [
  "lazy",
  "parquet",
  "dtype-struct",
  "serde",
] }
