[package]
name = "riskfabric"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { version = "1.19.0", features = ["v4"] }
rayon = '1.11.0'
fake = '4.4.0'
h3o = "0.9.4"
chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"
serde_yaml = "0.9"
rand = "0.9.2"
polars = { version = "0.51.0", features = [
  "lazy",
  "parquet",
  "dtype-struct",
  "serde",
  "temporal",
  "strings",
  "is_in",
  "cum_agg",
  "ipc",
] }
osmpbf = "0.3.3"
postgres = { version = "0.19", features = ["with-chrono-0_4", "with-uuid-1"] }
clap = { version = "4.5.60", features = ["derive"] }
rdkafka = { version = "0.36.2", features = ["cmake-build"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
